Changed the HTML for the site.

--- a/project/blog/templates/blog/post_list.html
+++ b/project/blog/templates/blog/post_list.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Dmitry page</title>
     </head>
     <body>
         <div>
